nodered.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  labels:
    app: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: nodedata
          persistentVolumeClaim:
            claimName: nodedata
      containers:
        - name: redcontti
          image: nodered/node-red
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: nodedata
              mountPath: /data
