noderedservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered-service
spec:
  selector:
    app: nodered
  ports:
    - name: noderediportti
      protocol: TCP
      port: 1880
