ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-ingress
spec:
  defaultBackend:
    service:
      name: nodered-service
      port:
        number: 80
